add pm2 service in this Project

--- a/views/includes/topbar.ejs
+++ b/views/includes/topbar.ejs
@@ -1,6 +1,4 @@
-<div class="top-bar-container" data-sticky-container>
-	<div class="sticky" data-sticky data-options="anchor: page; marginTop: 0; stickyOn: small;">
-		<div class="top-bar">
+<div class="top-bar" data-sticky-container>
 			<div class="row column expanded">
 				<div class="top-bar-left">
 					<ul class="dropdown menu" data-dropdown-menu>
@@ -18,7 +16,4 @@
 					</ul>
 				</div>
 			</div>
-		</div>
-	</div>
 </div>
-
