--- a/views/includes/topbar.ejs
+++ b/views/includes/topbar.ejs
@@ -1,19 +1,31 @@
-<div class="top-bar" data-sticky-container>
-			<div class="row column expanded">
-				<div class="top-bar-left">
-					<ul class="dropdown menu" data-dropdown-menu>
-						<li class="menu-text">【智工網】</li>
-						<li class="has-submenu">
-					</ul>
-				</div>
-				<div class="top-bar-right">
-					<ul class="dropdown menu" data-dropdown-menu>
-						<li>
-							<a href="/logout">
-								<img src="/images/exit.png" style="height:25px;width:25px"></img>
-							</>
-						</li>
-					</ul>
-				</div>
-			</div>
+<div class="off-canvas-wrapper">
+<div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
+	<div class="off-canvas position-bottom" id="my-info" data-off-canvas data-position="left">
+		<div class="row column">
+			<br>
+			<h5>智工網</h5>
+			<p>Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo.</p>
+		</div>
+	</div>
 </div>
+</div>
+<nav class="hover-underline-menu" data-menu-underline-from-center>
+  <ul class="menu left-side">
+<li>
+	<div class="off-canvas-content" data-off-canvas-content>
+			<div class="title-bar-left">
+				<button class="menu-icon" type="button" data-open="my-info"></button>
+				<span class="title-bar-title">智工網</span>
+			</div>
+		</div>
+</li>
+    <li><a href="#">One</a></li>
+    <li><a href="#">Two</a></li>
+    <li><a href="#">Three</a></li>
+    <li><a href="#">Four</a></li>
+		
+</ul>
+<hr>
+</nav>
+
+
