--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,113 @@
 <!doctype html>
 <html>
 	<head>
-		<% include includes/loginHead %>
+		<% include includes/head %>
 	</head>
 	<body>
-		<% include includes/topbar %>
-		<h1> v 0.0.0 </h1>
-		<% include includes/foundation %>
+
+
+<% include includes/topbar %>
+	<div class="callout primary">
+	<div class="row column">
+	<h1>Hello! This is the portfolio of a very witty person.</h1>
+	<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla.</p>
+	</div>
+	</div>
+	<div class="row small-up-2 medium-up-3 large-up-4">
+	<div class="column">
+	<img class="thumbnail" src="https://placehold.it/550x550">
+	<h5>My Site</h5>
+	</div>
+	<div class="column">
+	<img class="thumbnail" src="https://placehold.it/550x550">
+	<h5>My Site</h5>
+	</div>
+	<div class="column">
+	<img class="thumbnail" src="https://placehold.it/550x550">
+	<h5>My Site</h5>
+	</div>
+	<div class="column">
+	<img class="thumbnail" src="https://placehold.it/550x550">
+	<h5>My Site</h5>
+	</div>
+	<div class="column">
+	<img class="thumbnail" src="https://placehold.it/550x550">
+	<h5>My Site</h5>
+	</div>
+	<div class="column">
+	<img class="thumbnail" src="https://placehold.it/550x550">
+	<h5>My Site</h5>
+	</div>
+	<div class="column">
+	<img class="thumbnail" src="https://placehold.it/550x550">
+	<h5>My Site</h5>
+	</div>
+	<div class="column">
+	<img class="thumbnail" src="https://placehold.it/550x550">
+	<h5>My Site</h5>
+	</div>
+	<div class="column">
+	<img class="thumbnail" src="https://placehold.it/550x550">
+	<h5>My Site</h5>
+	</div>
+	<div class="column">
+	<img class="thumbnail" src="https://placehold.it/550x550">
+	<h5>My Site</h5>
+	</div>
+	<div class="column">
+	<img class="thumbnail" src="https://placehold.it/550x550">
+	<h5>My Site</h5>
+	</div>
+	<div class="column">
+	<img class="thumbnail" src="https://placehold.it/550x550">
+	<h5>My Site</h5>
+	</div>
+	</div>
+	<hr>
+	<div class="row">
+	<div class="medium-6 columns">
+	<h3>Contact Me</h3>
+	<p>Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor.</p>
+	<ul class="menu">
+	<li><a href="#">Dribbble</a></li>
+	<li><a href="#">Facebook</a></li>
+	<li><a href="#">Yo</a></li>
+	</ul>
+	</div>
+	<div class="medium-6 columns">
+	<label>Name
+	<input type="text" placeholder="Name">
+	</label>
+	<label>Email
+	<input type="text" placeholder="Email">
+	</label>
+	<label>
+	Message
+	<textarea placeholder="holla at a designerd"></textarea>
+	</label>
+	<input type="submit" class="button expanded" value="Submit">
+	</div>
+	</div>
+	</div>
+</div>
+
+<% include includes/js %>
+<% include includes/foundation %>
+<script>
+$("[data-menu-underline-from-center] a").addClass("underline-from-center");
+</script>
+
+<script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-2195009-2', 'auto');
+      ga('send', 'pageview');
+
+      ga('create', 'UA-2195009-27', 'auto', {name: "foundation"});
+      ga('foundation.send', 'pageview');
+</script>
+
 	</body>
 </html> 
