--- a/views/includes/topbar.ejs
+++ b/views/includes/topbar.ejs
@@ -4,7 +4,10 @@
 		<div class="row column">
 			<br>
 			<h5>智工網</h5>
-			<p>Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo.</p>
+			<div class="row small-up-2 medium-up-3 large-up-4">
+				<a href="#">电子工程</a>
+				<a href="#">机器人</a>
+			</div>
 		</div>
 	</div>
 </div>
