--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,8 @@
 <% include includes/topbar %>
 	<div class="callout primary">
 	<div class="row column">
-	<h1>Hello! This is the portfolio of a very witty person.</h1>
-	<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla.</p>
+	<h1>欢迎来到智工网!</h1>
+	<p class="lead">面向智能硬件制造行业专业的技术学习平台</p>
 	</div>
 	</div>
 	<div class="row small-up-2 medium-up-3 large-up-4">
@@ -67,11 +67,9 @@
 	<div class="row">
 	<div class="medium-6 columns">
 	<h3>Contact Me</h3>
-	<p>Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor.</p>
+	<p>专注智能工业的教育平台</p>
 	<ul class="menu">
-	<li><a href="#">Dribbble</a></li>
-	<li><a href="#">Facebook</a></li>
-	<li><a href="#">Yo</a></li>
+	<li><a href="#">微信</a></li>
 	</ul>
 	</div>
 	<div class="medium-6 columns">
