--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -4,37 +4,38 @@
 <link rel="stylesheet" href="/stylesheets/foundation.min.css">
 <style>
 
-.hover-underline-menu {
-  width: 100%;
-}
 
-.hover-underline-menu .menu {
-  background-color: #2C3840;
-}
-
-.hover-underline-menu .menu a {
+.foundation-5-top-bar {
+  background: #333;
   color: #fefefe;
-  padding: 1.2rem 1.5rem;
 }
 
-.hover-underline-menu .menu .underline-from-center {
-  position: relative;
+.foundation-5-top-bar .menu {
+  background: #333;
 }
 
-.hover-underline-menu .menu .underline-from-center::after {
-  content: "";
-  position: absolute;
-  top: calc(100% - 0.125rem);
-  border-bottom: 0.125rem solid #fefefe;
-  left: 50%;
-  right: 50%;
-  transition: all 0.5s ease;
+.foundation-5-top-bar .menu a {
+  color: #fefefe;
 }
 
-.hover-underline-menu .menu .underline-from-center:hover::after {
-  left: 0;
-  right: 0;
-  transition: all 0.5s ease;
+.foundation-5-top-bar .is-dropdown-submenu {
+  border: 0;
+}
+
+.foundation-5-top-bar .is-dropdown-submenu-item.opens-right a::after {
+  border-color: transparent transparent transparent #fefefe;
+}
+
+.foundation-5-top-bar .js-drilldown-back > a::before {
+  border-color: transparent #fefefe transparent transparent;
+}
+
+.foundation-5-top-bar .is-drilldown-submenu-parent > a::after {
+  border-color: transparent transparent transparent #fefefe;
+}
+
+.foundation-5-top-bar .dropdown.menu.medium-horizontal > li.is-dropdown-submenu-parent > a::after {
+  border-color: #fefefe transparent transparent;
 }
 
 
