--- a/views/includes/topbar.ejs
+++ b/views/includes/topbar.ejs
@@ -12,23 +12,54 @@
 	</div>
 </div>
 </div>
-<nav class="hover-underline-menu" data-menu-underline-from-center>
-  <ul class="menu left-side">
-<li>
-	<div class="off-canvas-content" data-off-canvas-content>
-			<div class="title-bar-left">
-				<button class="menu-icon" type="button" data-open="my-info"></button>
-				<span class="title-bar-title">智工網</span>
-			</div>
-		</div>
-</li>
-    <li><a href="#">One</a></li>
-    <li><a href="#">Two</a></li>
-    <li><a href="#">Three</a></li>
-    <li><a href="#">Four</a></li>
-		
-</ul>
-<hr>
-</nav>
+
+<div class="top-bar foundation-5-top-bar">
+  <div class="top-bar-title">
+    <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
+      <button class="menu-icon" type="button" data-toggle></button>
+    </span>
+		<span class="title-bar-title">智工網</span>
+  </div>
+  <div id="responsive-menu">
+    <div class="top-bar-left">
+      <ul class="dropdown vertical medium-horizontal menu" data-responsive-menu="drilldown medium-dropdown" data-auto-height="true" data-animate-height="true">
+        <li>
+          <a href="#">One</a>
+          <ul class="menu">
+            <li><a href="#">One</a></li>
+            <li><a href="#">Two</a></li>
+            <li>
+              <a href="#">Three</a>
+              <ul class="menu">
+                <li><a href="#">One</a></li>
+                <li><a href="#">Two</a></li>
+                <li>
+                  <a href="#">Three</a>
+                  <ul class="menu">
+                    <li><a href="#">One</a></li>
+                    <li><a href="#">Two</a></li>
+                    <li><a href="#">Three</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li><a href="#">Two</a></li>
+        <li><a href="#">Three</a></li>
+      </ul>
+    </div>
+    <div class="top-bar-right">
+      <ul class="menu">
+        <li><input type="search" placeholder="Search"></li>
+        <li><button type="button" class="button">Search</button></li>
+		<li><button class="menu-icon" type="button" data-open="my-info"></button></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+
+
 
 
