--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 <% include includes/topbar %>
 	<div class="callout primary">
 	<div class="row column">
-	<h1>欢迎来到智工网!</h1>
+	<h1>欢迎来到智工网!!!</h1>
 	<p class="lead">面向智能硬件制造行业专业的技术学习平台</p>
 	</div>
 	</div>
