--- a/views/includes/topbar.ejs
+++ b/views/includes/topbar.ejs
@@ -24,36 +24,22 @@
     <div class="top-bar-left">
       <ul class="dropdown vertical medium-horizontal menu" data-responsive-menu="drilldown medium-dropdown" data-auto-height="true" data-animate-height="true">
         <li>
-          <a href="#">One</a>
+          <a href="#">教学分类</a>
           <ul class="menu">
-            <li><a href="#">One</a></li>
-            <li><a href="#">Two</a></li>
-            <li>
-              <a href="#">Three</a>
-              <ul class="menu">
-                <li><a href="#">One</a></li>
-                <li><a href="#">Two</a></li>
-                <li>
-                  <a href="#">Three</a>
-                  <ul class="menu">
-                    <li><a href="#">One</a></li>
-                    <li><a href="#">Two</a></li>
-                    <li><a href="#">Three</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
+            <li><a href="#">电子工程</a></li>
+            <li><a href="#">机器人</a></li>
           </ul>
         </li>
-        <li><a href="#">Two</a></li>
-        <li><a href="#">Three</a></li>
+        <li><a href="#">其他功能</a></li>
+        <li><a href="#">管理后台</a></li>
       </ul>
     </div>
     <div class="top-bar-right">
       <ul class="menu">
+		    <li><a href="#">Login</a></li>
+		    <li><button class="menu-icon" type="button" data-open="my-info"></button></li>
         <li><input type="search" placeholder="Search"></li>
         <li><button type="button" class="button">Search</button></li>
-		<li><button class="menu-icon" type="button" data-open="my-info"></button></li>
       </ul>
     </div>
   </div>
