--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,54 +14,19 @@
 	</div>
 	</div>
 	<div class="row small-up-2 medium-up-3 large-up-4">
-	<div class="column">
-	<img class="thumbnail" src="https://placehold.it/550x550">
-	<h5>My Site</h5>
-	</div>
-	<div class="column">
-	<img class="thumbnail" src="https://placehold.it/550x550">
-	<h5>My Site</h5>
-	</div>
-	<div class="column">
-	<img class="thumbnail" src="https://placehold.it/550x550">
-	<h5>My Site</h5>
-	</div>
-	<div class="column">
-	<img class="thumbnail" src="https://placehold.it/550x550">
-	<h5>My Site</h5>
-	</div>
-	<div class="column">
-	<img class="thumbnail" src="https://placehold.it/550x550">
-	<h5>My Site</h5>
-	</div>
-	<div class="column">
-	<img class="thumbnail" src="https://placehold.it/550x550">
-	<h5>My Site</h5>
-	</div>
-	<div class="column">
-	<img class="thumbnail" src="https://placehold.it/550x550">
-	<h5>My Site</h5>
-	</div>
-	<div class="column">
-	<img class="thumbnail" src="https://placehold.it/550x550">
-	<h5>My Site</h5>
-	</div>
-	<div class="column">
-	<img class="thumbnail" src="https://placehold.it/550x550">
-	<h5>My Site</h5>
-	</div>
-	<div class="column">
-	<img class="thumbnail" src="https://placehold.it/550x550">
-	<h5>My Site</h5>
-	</div>
-	<div class="column">
-	<img class="thumbnail" src="https://placehold.it/550x550">
-	<h5>My Site</h5>
-	</div>
-	<div class="column">
-	<img class="thumbnail" src="https://placehold.it/550x550">
-	<h5>My Site</h5>
-	</div>
+    <h3>电子工程</h3>
+	  <div class="column">
+      <embed src="http://player.youku.com/player.php/Type/Folder/Fid/22127316/Ob/1/sid/XNjk1MDUyNzU2/v.swf" quality="high" width="550" height="550" align="middle" allowScriptAccess="always" allowFullScreen="true" mode="transparent" type="application/x-shockwave-flash"></embed>
+	    <h5>My Site</h5>
+	  </div>
+	  <div class="column">
+	    <img class="thumbnail" src="https://placehold.it/550x550">
+	    <h5>My Site</h5>
+	  </div>
+	  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/550x550">
+	    <h5>My Site</h5>
+	  </div>
 	</div>
 	<hr>
 	<div class="row">
