--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,11 +16,13 @@
 	<div class="row small-up-2 medium-up-3 large-up-4">
     <h3>电子工程</h3>
 	  <div class="column">
+                                                         XMzA2NTg1MzI2
       <embed src="http://player.youku.com/player.php/sid/XMTAzMzA3ODI0/v.swf" quality="high" width="550" height="550" align="middle" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>
+
 	    <h5>My Site</h5>
 	  </div>
 	  <div class="column">
-	    <img class="thumbnail" src="https://placehold.it/550x550">
+      <embed src="http://player.youku.com/player.php/sid/XMzA2NTg1MzI2/v.swf" quality="high" width="550" height="550" align="middle" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>
 	    <h5>My Site</h5>
 	  </div>
 	  <div class="column">
