--- a/views/includes/topbar.ejs
+++ b/views/includes/topbar.ejs
@@ -7,6 +7,21 @@
 			<div class="row small-up-2 medium-up-3 large-up-4">
 				<a href="#">电子工程</a>
 				<a href="#">机器人</a>
+				<a href="#">人工智能</a>
+				<a href="#">激光</a>
+				<a href="#">可穿戴设备</a>
+				<a href="#">3D打印</a>
+				<a href="#">汽车科技</a>
+				<a href="#">智能硬件</a>
+				<a href="#">智能家居</a>
+				<a href="#">仪表仪器</a>
+				<a href="#">物联网</a>
+				<a href="#">云计算</a>
+				<a href="#">VR</a>
+				<a href="#">新能源汽车</a>
+				<a href="#">医疗科技</a>
+				<a href="#">传感器</a>
+				<a href="#">半导体</a>
 			</div>
 		</div>
 	</div>
@@ -24,10 +39,25 @@
     <div class="top-bar-left">
       <ul class="dropdown vertical medium-horizontal menu" data-responsive-menu="drilldown medium-dropdown" data-auto-height="true" data-animate-height="true">
         <li>
-          <a href="#">教学分类</a>
+          <a href="#"><img class="svg" src="/images/fi-database.svg" data-open="my-info" style="height:25px;width:25px"></img>教学分类</a>
           <ul class="menu">
             <li><a href="#">电子工程</a></li>
             <li><a href="#">机器人</a></li>
+						<li><a href="#">人工智能</a></li>
+						<li><a href="#">激光</a></li>
+						<li><a href="#">可穿戴设备</a></li>
+						<li><a href="#">3D打印</a></li>
+						<li><a href="#">汽车科技</a></li>
+						<li><a href="#">智能硬件</a></li>
+						<li><a href="#">智能家居</a></li>
+						<li><a href="#">仪表仪器</a></li>
+						<li><a href="#">物联网</a></li>
+						<li><a href="#">云计算</a></li>
+						<li><a href="#">VR</a></li>
+						<li><a href="#">新能源汽车</a></li>
+						<li><a href="#">医疗科技</a></li>
+						<li><a href="#">传感器</a></li>
+						<li><a href="#">半导体</a></li>
           </ul>
         </li>
         <li><a href="#">其他功能</a></li>
@@ -36,16 +66,13 @@
     </div>
     <div class="top-bar-right">
       <ul class="menu">
-		    <li><a href="#">Login</a></li>
-		    <li><button class="menu-icon" type="button" data-open="my-info"></button></li>
+		    <li><a href="#"><img class="svg" src="/images/fi-torso.svg" style="height:25px;width:25px"></img>Login</a></li>
         <li><input type="search" placeholder="Search"></li>
         <li><button type="button" class="button">Search</button></li>
       </ul>
     </div>
   </div>
 </div>
-
-
 
 
 
