--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,29 +8,43 @@
 
 <% include includes/topbar %>
 	<div class="callout primary">
-	<div class="row column">
-	<h1>欢迎来到智工网!!!</h1>
-	<p class="lead">面向智能硬件制造行业专业的技术学习平台</p>
+		<div class="row column">
+			<h1>欢迎来到智工网!!!</h1>
+			<p class="lead">面向智能硬件制造行业专业的技术学习平台</p>
+		</div>
 	</div>
+	<% for (var i in nameList) { %>
+	<div class="row callout training-callout small-up-1 medium-up-3 large-up-3">
+   	<h3><a href="/page/<%= i %>"> <%= nameList[i] %>... </a></h3>
+	  <div class="column card">
+			<div class="card-section">
+      <embed src="http://player.youku.com/player.php/sid/XMTAzMzA3ODI0/v.swf" quality="high" align="center" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>
+			</div>
+			<div class="card-section">
+	    	<h5 align="center">Video</h5>
+				<p> Video description ... </p>
+			</div>
+	  </div>
+	  <div class="column card">
+			<div class="card-section">
+      <embed src="http://player.youku.com/player.php/sid/XMTAzMzA3ODI0/v.swf" quality="high" align="center" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>
+			</div>
+			<div class="card-section">
+	    	<h5 align="center">Video</h5>
+				<p> Video description ... </p>
+			</div>
+	  </div>
+	  <div class="column card">
+			<div class="card-section">
+      <embed src="http://player.youku.com/player.php/sid/XMTAzMzA3ODI0/v.swf" quality="high" align="center" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>
+			</div>
+			<div class="card-section">
+	    	<h5 align="center">Video</h5>
+				<p> Video description ... </p>
+			</div>
+	  </div>
 	</div>
-	<div class="row small-up-2 medium-up-3 large-up-4">
-    <h3>电子工程</h3>
-	  <div class="column">
-                                                         XMzA2NTg1MzI2
-      <embed src="http://player.youku.com/player.php/sid/XMTAzMzA3ODI0/v.swf" quality="high" width="550" height="550" align="middle" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>
-
-	    <h5>My Site</h5>
-	  </div>
-	  <div class="column">
-      <embed src="http://player.youku.com/player.php/sid/XMzA2NTg1MzI2/v.swf" quality="high" width="550" height="550" align="middle" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>
-	    <h5>My Site</h5>
-	  </div>
-	  <div class="column">
-      <img class="thumbnail" src="https://placehold.it/550x550">
-	    <h5>My Site</h5>
-	  </div>
-	</div>
-	<hr>
+	<% } %>
 	<div class="row">
 	<div class="medium-6 columns">
 	<h3>Contact Me</h3>
