--- a/views/includes/topbar.ejs
+++ b/views/includes/topbar.ejs
@@ -66,7 +66,12 @@
     </div>
     <div class="top-bar-right">
       <ul class="menu">
-		    <li><a href="#"><img class="svg" src="/images/fi-torso.svg" style="height:25px;width:25px"></img>Login</a></li>
+<% if(user==="") { %>
+		    <li><a href="/login"><img class="svg" src="/images/fi-torso.svg" style="height:25px;width:25px"></img>Login</a></li>
+<% } else { %>
+		    <li><a href="/login"><img class="svg" src="/images/fi-torso.svg" style="height:25px;width:25px"></img><%= user %></a></li>
+<% } %>
+
         <li><input type="search" placeholder="Search"></li>
         <li><button type="button" class="button">Search</button></li>
       </ul>
