--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
     password<input type="password" placeholder="password" name="password">
   </label>
 	Verification Code : <img src="/captcha.png"/><input type="text" placeholder="" name="vcode">
-  <input type="checkbox" name="remember" value="yes">Remember Me
+  <!--input type="checkbox" name="remember" value="yes">Remember Me --!>
   <br>
   <button type="submit" class="button expanded">Login</button>
 </form>
