--- a/views/includes/topbar.ejs
+++ b/views/includes/topbar.ejs
@@ -19,11 +19,11 @@
     <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
       <button class="menu-icon" type="button" data-toggle></button>
     </span>
-		<span class="title-bar-title">智工網</span>
   </div>
   <div id="responsive-menu">
     <div class="top-bar-left">
       <ul class="dropdown vertical medium-horizontal menu" data-responsive-menu="drilldown medium-dropdown" data-auto-height="true" data-animate-height="true">
+        <li class="title-bar-title"><a href="/">智工網</a></li>
         <li>
           <a href="#"><img class="svg" src="/images/fi-database.svg" data-open="my-info" style="height:25px;width:25px"></img>教学分类</a>
           <ul class="menu">
@@ -32,26 +32,29 @@
             <% } %>
           </ul>
         </li>
-        <li><a href="#">其他功能</a></li>
-				<% if(user.role === "admin") { %>
+        <% if (user.role === "admin") { %>
         <li><a href="#">管理后台</a></li>
-				<% } %>
+        <% } %>
       </ul>
     </div>
     <div class="top-bar-right">
-      <ul class="menu">
-<% if(user==="") { %>
+      <ul class="dropdown vertical medium-horizontal menu" data-responsive-menu="drilldown medium-dropdown" data-auto-height="true" data-animate-height="true">
+      <% if(user==="") { %>
 		    <li><a href="/login"><img class="svg" src="/images/fi-torso.svg" style="height:25px;width:25px"></img>Login</a></li>
-<% } else { %>
-		    <li><a href="/profile"><img class="svg" src="/images/fi-torso.svg" style="height:25px;width:25px"></img><%= user.username %></a></li>
-<% } %>
-
-        <!--li><input type="search" placeholder="Search"></li>
-        <li><button type="button" class="button">Search</button></li--!>
+      <% } else { %>
+		    <li><a href="/profile"><img class="svg" src="/images/fi-torso.svg" style="height:25px;width:25px"></img><%= user.username %></a>
+         <ul class="menu">
+          <li><a href="/logout"><img src="/images/exit.png" style="height:25px;width:25px"></img>Logout</a></li>
+        </ul>
+        </li>
+      <% } %>
       </ul>
     </div>
   </div>
 </div>
 
+
+        <!--li><input type="search" placeholder="Search"></li>
+        <li><button type="button" class="button">Search</button></li--!>
 
 
