--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,37 +13,21 @@
 	</div>
 	<% for (var i in nameList) { %>
     <% if(i === "ee" || i === "vr" || i === "ai") { %>
-	<div class="row callout training-callout small-up-1 medium-up-3 large-up-3">
-   	<h3><a href="/page/<%= i %>"> <%= nameList[i] %>... </a></h3>
-	  <div class="column card">
-			<div class="card-section">
-      <embed src="http://player.youku.com/player.php/sid/XMTAzMzA3ODI0/v.swf" quality="high" align="center" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>
+		<div class="row callout training-callout small-up-1 medium-up-3 large-up-3">
+   		<h3><a href="/page/<%= i %>"> <%= nameList[i] %>... </a></h3>
+			<div class="column card">
+			<% for (var j in videoList[i]) { %>
+				<div class="card-section">
+ 		     <embed src="http://player.youku.com/player.php/sid/<%= j %>>/v.swf" quality="high" align="center" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>
+				</div>
+				<div class="card-section">
+							<h5 align="center"><%= videoList[i][j]["name"] %>  </h5>
+							<p><%= videoList[i][j]["description"] %>  </p>
+				</div>
+			<% } %>
 			</div>
-			<div class="card-section">
-	    	<h5 align="center">Video</h5>
-				<p> Video description ... </p>
-			</div>
-	  </div>
-	  <div class="column card">
-			<div class="card-section">
-      <embed src="http://player.youku.com/player.php/sid/XMTAzMzA3ODI0/v.swf" quality="high" align="center" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>
-			</div>
-			<div class="card-section">
-	    	<h5 align="center">Video</h5>
-				<p> Video description ... </p>
-			</div>
-	  </div>
-	  <div class="column card">
-			<div class="card-section">
-      <embed src="http://player.youku.com/player.php/sid/XMTAzMzA3ODI0/v.swf" quality="high" align="center" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>
-			</div>
-			<div class="card-section">
-	    	<h5 align="center">Video</h5>
-				<p> Video description ... </p>
-			</div>
-	  </div>
-	</div>
-	<% } %>
+		</div>
+		<% } %>
 	<% } %>
 	<div class="row">
 	<div class="medium-6 columns">
@@ -74,19 +58,34 @@
 <% include includes/foundation %>
 <script>
 $("[data-menu-underline-from-center] a").addClass("underline-from-center");
+videoList("ee");
+   	//<h3><a href="/page/<%= i %>"> <%= nameList[i] %>... </a></h3>
+	  //<div class="column card">
+		//	<div class="card-section">
+    //  <embed src="http://player.youku.com/player.php/sid/XMTAzMzA3ODI0/v.swf" quality="high" align="center" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>
+		//	</div>
+		//	<div class="card-section">
+	  //  	<h5 align="center">Video</h5>
+		//		<p> Video description ... </p>
+		//	</div>
+	  //</div>
+function videoList(type){
+	$.ajax({
+		url : "/videoList/"+type,
+		type : "GET",
+		success: function(data){
+			console.log("here");
+			console.log(data);
+			$("#contain"+type).append("h3").html("OKOK");
+		},
+		error : function(XMLHttpRequest, textStatus, errorThrown) { 
+			alert("Status: " + textStatus,"Error"+errorThrown);
+		}
+	});
+
+}
 </script>
 
-<script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-2195009-2', 'auto');
-      ga('send', 'pageview');
-
-      ga('create', 'UA-2195009-27', 'auto', {name: "foundation"});
-      ga('foundation.send', 'pageview');
-</script>
 
 	</body>
 </html> 
