--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,21 +12,25 @@
 		</div>
 	</div>
 	<% for (var i in nameList) { %>
-    <% if(i === "ee" || i === "vr" || i === "ai") { %>
-		<div class="row callout training-callout small-up-1 medium-up-3 large-up-3">
-   		<h3><a href="/page/<%= i %>"> <%= nameList[i] %>... </a></h3>
-			<div class="column card">
-			<% for (var j in videoList[i]) { %>
-				<div class="card-section">
- 		     <embed src="http://player.youku.com/player.php/sid/<%= j %>>/v.swf" quality="high" align="center" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>
+		<% if(videoList[i]) { %>
+			<div class="row callout training-callout small-up-1 medium-up-2 large-up-3">
+   			<h3><a href="/page/<%= i %>"><%= nameList[i] %>... </a></h3>
+				<div class="column card">
+				<% for (var j in videoList[i]) { %>
+					<div class="card-section">
+						<div align="center">
+<!-- 			     <embed src="http://player.youku.com/player.php/sid/<%= j %>>/v.swf" quality="high" align="center" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>--!>
+							<img src="https://vthumb.ykimg.com/vi/<%= j %>==/89/default.jpg"></img>
+						</div>
+					</div>
+					<div class="card-section">
+								<h4 align="center"><a href="/each/<%= i %>/<%= j %>"><%= videoList[i][j]["name"] %>  </a></h4>
+								<hr>
+								<p class="text-truncate"><%= videoList[i][j]["description"] %>  </p>
+					</div>
+				<% } %>
 				</div>
-				<div class="card-section">
-							<h5 align="center"><%= videoList[i][j]["name"] %>  </h5>
-							<p><%= videoList[i][j]["description"] %>  </p>
-				</div>
-			<% } %>
 			</div>
-		</div>
 		<% } %>
 	<% } %>
 	<div class="row">
@@ -58,32 +62,6 @@
 <% include includes/foundation %>
 <script>
 $("[data-menu-underline-from-center] a").addClass("underline-from-center");
-videoList("ee");
-   	//<h3><a href="/page/<%= i %>"> <%= nameList[i] %>... </a></h3>
-	  //<div class="column card">
-		//	<div class="card-section">
-    //  <embed src="http://player.youku.com/player.php/sid/XMTAzMzA3ODI0/v.swf" quality="high" align="center" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>
-		//	</div>
-		//	<div class="card-section">
-	  //  	<h5 align="center">Video</h5>
-		//		<p> Video description ... </p>
-		//	</div>
-	  //</div>
-function videoList(type){
-	$.ajax({
-		url : "/videoList/"+type,
-		type : "GET",
-		success: function(data){
-			console.log("here");
-			console.log(data);
-			$("#contain"+type).append("h3").html("OKOK");
-		},
-		error : function(XMLHttpRequest, textStatus, errorThrown) { 
-			alert("Status: " + textStatus,"Error"+errorThrown);
-		}
-	});
-
-}
 </script>
 
 
