--- a/views/includes/topbar.ejs
+++ b/views/includes/topbar.ejs
@@ -32,7 +32,7 @@
             <% } %>
           </ul>
         </li>
-        <% if (user.role === "admin") { %>
+        <% if(user.username === "admin") { %>
         <li><a href="#">管理后台</a>
 				<ul class="menu">
 					<li><a href="/userManagement">帳號管理</a></li>
