--- a/views/page.ejs
+++ b/views/page.ejs
@@ -13,42 +13,30 @@
 	</head>
 	<body>
 <% include includes/topbar %>
-	<!--div class="callout primary">
-		<div class="row column">
-			<h1>欢迎来到智工网!!!</h1>
-			<p class="lead">面向智能硬件制造行业专业的技术学习平台</p>
-		</div>
-	</div--!>
-	<% for (var i in nameList) { %>
-		<% if(videoList[i]) { %>
+   <% if(Object.keys(videoList).length > 0) { %> 
 			<div class="row callout training-callout small-up-1 medium-up-2 large-up-3">
-   			<h3><a href="/page/<%= i %>"><%= nameList[i] %>... </a></h3>
+   			<h3><%= nameList[thisType] %></h3>
 				<div class="column card">
-				<!--% for (var j in videoList[i]) { %--!>
-        <% Object.keys(videoList[i]).forEach(function(j,e) { %> 
-          <% if(e < 3) { %>
+        <% Object.keys(videoList).forEach(function(j,e) { %> 
 					<div class="card-section">
 						<div align="center">
-<!-- 			     <embed src="http://player.youku.com/player.php/sid/<%= j %>>/v.swf" quality="high" align="center" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>--!>
-              <a href="/each/<%= i %>/<%= j %>"><img src="https://vthumb.ykimg.com/vi/<%= j %>==/89/default.jpg"></img></a>
+              <a href="/each/<%= thisType %>/<%= j %>"><img src="https://vthumb.ykimg.com/vi/<%= j %>==/89/default.jpg"></img></a>
 						</div>
 					</div>
 					<div class="card-section">
-								<h4 align="center"><a href="/each/<%= i %>/<%= j %>"><%= videoList[i][j]["name"] %></a></h4>
+								<h4 align="center"><a href="/each/<%= thisType %>/<%= j %>"><%= videoList[j]["name"] %></a></h4>
 								<hr>
-								<p class="text-truncate truncate"><%= videoList[i][j]["description"] %>  </p>
+								<p class="text-truncate truncate"><%= videoList[j]["description"] %>  </p>
 					</div>
-        <% } %>
 				<% }) %>
 				</div>
 			</div>
-		<% } else { %>
-			<!--div class="row callout training-callout small-up-1 medium-up-2 large-up-3">
-   			<h3><a href="/page/<%= i %>"><%= nameList[i] %>... </a></h3>
+    <% } else { %>
+			<div class="row callout training-callout small-up-1 medium-up-2 large-up-3">
+   			<h3><%= nameList[thisType] %></h3>
         <p> 没有视频 </p>
-      </div--!>
+      </div>
     <% } %>
-	<% } %>
 	<div class="row">
 	<div class="medium-6 columns">
 	<h3>Contact Me</h3>
