--- a/views/page.ejs
+++ b/views/page.ejs
@@ -37,31 +37,8 @@
         <p> 没有视频 </p>
       </div>
     <% } %>
-	<div class="row">
-	<div class="medium-6 columns">
-	<h3>Contact Me</h3>
-	<p>专注智能工业的教育平台</p>
-	<ul class="menu">
-	<li><a href="#">微信</a></li>
-	</ul>
-	</div>
-	<div class="medium-6 columns">
-	<label>Name
-	<input type="text" placeholder="Name">
-	</label>
-	<label>Email
-	<input type="text" placeholder="Email">
-	</label>
-	<label>
-	Message
-	<textarea placeholder="holla at a designerd"></textarea>
-	</label>
-	<input type="submit" class="button expanded" value="Submit">
-	</div>
-	</div>
-	</div>
-</div>
 
+<% include includes/footer %>
 <% include includes/js %>
 <% include includes/foundation %>
 <script>
