--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,67 +13,38 @@
 	</head>
 	<body>
 <% include includes/topbar %>
-	<!--div class="callout primary">
+	<div class="callout primary">
 		<div class="row column">
 			<h1>欢迎来到智工网!!!</h1>
 			<p class="lead">面向智能硬件制造行业专业的技术学习平台</p>
 		</div>
-	</div--!>
+	</div>
+	
 	<% for (var i in nameList) { %>
 		<% if(videoList[i]) { %>
 			<div class="row callout training-callout small-up-1 medium-up-2 large-up-3">
    			<h3><a href="/page/<%= i %>"><%= nameList[i] %>... </a></h3>
 				<div class="column card">
-				<!--% for (var j in videoList[i]) { %--!>
         <% Object.keys(videoList[i]).forEach(function(j,e) { %> 
           <% if(e < 3) { %>
 					<div class="card-section">
 						<div align="center">
-<!-- 			     <embed src="http://player.youku.com/player.php/sid/<%= j %>>/v.swf" quality="high" align="center" allowScriptAccess="sameDomain" type="application/x-shockwave-flash"></embed>--!>
               <a href="/each/<%= i %>/<%= j %>"><img src="https://vthumb.ykimg.com/vi/<%= j %>==/89/default.jpg"></img></a>
 						</div>
 					</div>
 					<div class="card-section">
-								<h4 align="center"><a href="/each/<%= i %>/<%= j %>"><%= videoList[i][j]["name"] %></a></h4>
-								<hr>
-								<p class="text-truncate truncate"><%= videoList[i][j]["description"] %>  </p>
+						<h4 align="center"><a href="/each/<%= i %>/<%= j %>"><%= videoList[i][j]["name"] %></a></h4>
+						<hr>
+						<p class="text-truncate truncate"><%= videoList[i][j]["description"] %>  </p>
 					</div>
-        <% } %>
+        	<% } %>
 				<% }) %>
 				</div>
 			</div>
-		<% } else { %>
-			<!--div class="row callout training-callout small-up-1 medium-up-2 large-up-3">
-   			<h3><a href="/page/<%= i %>"><%= nameList[i] %>... </a></h3>
-        <p> 没有视频 </p>
-      </div--!>
-    <% } %>
+		<% }  %>
 	<% } %>
-	<div class="row">
-	<div class="medium-6 columns">
-	<h3>Contact Me</h3>
-	<p>专注智能工业的教育平台</p>
-	<ul class="menu">
-	<li><a href="#">微信</a></li>
-	</ul>
-	</div>
-	<div class="medium-6 columns">
-	<label>Name
-	<input type="text" placeholder="Name">
-	</label>
-	<label>Email
-	<input type="text" placeholder="Email">
-	</label>
-	<label>
-	Message
-	<textarea placeholder="holla at a designerd"></textarea>
-	</label>
-	<input type="submit" class="button expanded" value="Submit">
-	</div>
-	</div>
-	</div>
-</div>
 
+<% include includes/footer %>
 <% include includes/js %>
 <% include includes/foundation %>
 <script>
