--- a/views/includes/topbar.ejs
+++ b/views/includes/topbar.ejs
@@ -35,8 +35,9 @@
         <% if(user.username === "admin") { %>
         <li><a href="#">管理后台</a>
 				<ul class="menu">
-					<li><a href="/userManagement">帳號管理</a></li>
-					<li><a href="/videoManagement">視頻管理</a></li>
+					<li><a href="/userManagement">帐号管理</a></li>
+					<li><a href="/videoManagement">视频管理</a></li>
+					<li><a href="/videoManagement">信息管理</a></li>
 				</ul>
 				</li>
         <% } %>
